# vs-average

./: Cargo.toml  README.md
src/: common.rs  lib.rs  mean.rs  median.rs
