[package]
name = "vs-average"
description = "A VapourSynth plugin for averaging clips together"
version = "0.2.0"
authors = ["EoE", "Nephren"]
license = "Apache-2.0"
edition = "2018"

[features]
parallel = ["rayon"]
default = ["parallel"]

[dependencies]
failure = "0.1.8"
half = "1.6.0"
rayon = { version = "1.3.0", optional = true }
vapoursynth = "0.3.0"

[lib]
crate-type = ["cdylib"]
