[package]
name = "vs-average"
description = "A VapourSynth plugin for averaging clips together"
version = "0.4.0-beta"
authors = ["EoE", "Nephren"]
license = "Apache-2.0"
edition = "2018"

[features]

[dependencies]
failure = "0.1.8"
half = "1.6.0"
vapoursynth = { version = "0.3.0", features = ["f16-pixel-type"] }

[lib]
crate-type = ["cdylib"]
